--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <!-- About Me -->
             <div class="about-me-container">
-                <h2 class="my-profession">Front-End Developer</h2>
+                <h2 class="my-profession">Fullstack Developer</h2>
                 <h1 class="my-name">Vasyl Poburiannyi</h1>
 
                 <p class="my-descr">Über mich:
