--- a/index.html
+++ b/index.html
@@ -28,17 +28,21 @@
                 <h1 class="my-name">Vasyl Poburiannyi</h1>
 
                 <p class="my-descr">Über mich:
-                    Ich bin ein Softwareentwickler, der begeistert ist, sich anspruchsvollen Projekten und Aufgaben zu
-                    stellen. Mein Fachwissen umfasst eine Vielzahl von Technologien, darunter Frontend-Entwicklung
-                    (JavaScript, TypeScript, React, Redux), Styling (CSS3), Backend-Entwicklung (Node.js, MongoDB),
-                    Markup (HTML5) und Benutzererfahrung. Ich besitze auch gute Kenntnisse im Bereich Versionskontrolle
-                    (Git, GitHub).
+                    Indem ich in den letzten 5 Jahren in Deutschland gelebt habe, habe ich mich bemüht, mich in der
+                    IT-Branche zu etablieren und meine Deutschkenntnisse auf ein Niveau zu bringen, das es mir
+                    ermöglicht, in diesem Bereich sicher zu arbeiten. Meine frühere Erfahrung und Ausbildung im Bereich
+                    Audit haben es mir ermöglicht, Erfahrungen im Umgang sowohl mit großen Organisationen als auch mit
+                    normalen Kunden zu sammeln. Zu meinen Stärken gehören die Vorliebe, Probleme zu lösen,
+                    Selbstmotivation und Selbstdisziplin sowie die Fähigkeit, effektiv im Team zu arbeiten und es zu
+                    führen. Ich höre auch gut zu und lerne schnell neue Informationen.
 
-                    Ich bin vertraut mit Tools wie Figma und beherrsche auch das Paketmanagement (Yarn).
-
-                    Insgesamt bin ich ein hochmotivierter Softwareentwickler mit einem vielfältigen Fähigkeitsspektrum .
-                    Ich bin stets auf der Suche nach neuen und spannenden Möglichkeiten, um mich weiterzuentwickeln und
-                    zu wachsen.</p>
+                    In letzter Zeit habe ich auch aktiv Fähigkeiten im Bereich Webentwicklung entwickelt und erweitert.
+                    Ich habe Kenntnisse in HTML, CSS, JavaScript, Node.js und React. Ich bin zuversichtlich, dass ich in
+                    der Lage bin, moderne und effiziente Webanwendungen zu entwickeln, die moderne Technologien und
+                    bewährte Entwicklungsmethoden nutzen. Mein kurzfristiges Ziel ist es, eine Grundlage zu schaffen, um
+                    mich gemeinsam mit Ihrem Unternehmen weiterzuentwickeln. Mein langfristiges Ziel ist es, ein Grund
+                    für den Erfolg Ihres Unternehmens zu werden. Heute bin ich vielleicht nicht so erfahren, aber ich
+                    bin jemand, den Sie kennenlernen und morgen mit dem Sie arbeiten möchten.</p>
 
             </div>
 
