--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <!-- Sidebar -->
         <aside class="sidebar">
-            <img src="./img/IMG_5826.jpg" alt="My foto" width="370px" class="my-foto">
+            <img src="./img/photo.jpg" alt="My foto" width="370px" class="my-foto">
 
             <!-- Contacts -->
 
